--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "author": "Oleksandr Popchuk",
   "license": "ISC",
   "devDependencies": {
-    "grunt": "^1.0.1",
+    "grunt": "^0.4.1",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-connect": "~0.8.0",
     "grunt-contrib-copy": "~0.4.1",
@@ -16,6 +16,7 @@
     "grunt-contrib-handlebars": "latest",
     "grunt-contrib-htmlmin": "^0.4.0",
     "grunt-contrib-imagemin": "^1.0.0",
+    "grunt-contrib-jasmine": "^1.0.3",
     "grunt-contrib-jshint": "~0.11.3",
     "grunt-contrib-requirejs": "^0.4.4",
     "grunt-contrib-sass": "^0.7.0",
@@ -23,6 +24,9 @@
     "grunt-contrib-watch": "latest",
     "grunt-debug-task": "^0.1.8",
     "grunt-node-inspector": "^0.2.0",
+    "grunt-template-jasmine-requirejs": "^0.2.3",
+    "jasmine": "^2.5.2",
+    "jasmine-core": "^2.5.2",
     "time-grunt": "^1.3.0"
   }
 }
